fixed overflow

--- a/ClassArtMemGam.css
+++ b/ClassArtMemGam.css
@@ -102,7 +102,8 @@ filter: brightness(90%);
 
 .card img {
     width:100%;
-    height: 100%;
+    object-fit: cover;
+    aspect-ratio: 1/1;
     border-radius: 8px;
     visibility: hidden;
     background-size: cover;
@@ -117,11 +118,11 @@ filter: brightness(90%);
 
 .flipped img {
     width: 100%;
-    height: 100%;
+    object-fit: cover;
     filter: brightness(100%);
     visibility: visible;
-    background-size: cover;
-    background-position: center;
+    /* background-size: cover;
+    background-position: center; */
 }
 
 .matched {
